--- a/jobs.html
+++ b/jobs.html
@@ -3,89 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>JMana Kovvali</title>
-
+  <title>Mana Kovvali</title>
+  <link rel="stylesheet" href="style.css" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
-
-  <style>
-    body {
-      background-color: #f8fafc;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .navbar {
-      background-color: #004d40 !important;
-    }
-    .navbar-brand, .nav-link {
-      color: #a7ffeb !important;
-      font-weight: 600;
-    }
-    .nav-link.active {
-      background-color: #26a69a !important;
-      border-radius: 5px;
-    }
-    .container {
-      max-width: 900px;
-      margin-top: 40px;
-      margin-bottom: 60px;
-    }
-    h2 {
-      color: #004d40;
-      font-weight: 700;
-      margin-bottom: 25px;
-      text-align: center;
-      border-bottom: 3px solid #26a69a;
-      padding-bottom: 8px;
-    }
-    #jobSearch {
-      border: 2px solid #26a69a;
-      border-radius: 30px;
-      padding: 10px 20px;
-      margin-bottom: 25px;
-    }
-    #jobSearch:focus {
-      border-color: #004d40;
-      outline: none;
-    }
-    .job-card {
-      border-left: 5px solid #26a69a;
-      background: #f8fff8;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgb(38 166 154 / 0.1);
-    }
-    .job-card h5 {
-      color: #004d40;
-      font-weight: 700;
-      margin-bottom: 10px;
-    }
-  </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Mana Kovvali</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav gap-2">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="Index.html#gallery">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="index.html#events">Events</a></li>
-        <li class="nav-item"><a class="nav-link active" href="jobs.html">Jobs</a></li>
-        <li class="nav-item"><a class="nav-link" href="schools.html">Schools</a></li>
-      </ul>
+  <header>
+    <div class="container header-container">
+
+      <h1> Mana Kovvali</h1>
+      <nav id="navbar">
+        <a href="index.html">Home</a>
+        <a href="index.html#events">Events</a>
+
+        <a href="jobs.html">Jobs</a>
+        <a href="index.html#gallery">Gallery</a>
+        <a href="schools.html">Schools</a>
+        <a href="index.html#contact">Contact</a>
+      </nav>
     </div>
-  </div>
-</nav>
+  </header>
 
 <!-- Main container -->
 <div class="container fade-section">
@@ -93,14 +34,18 @@
 
   <!-- Post Job Button -->
   <div class="text-end mb-4 fade-section">
+    <p>Request to add a job that helps our coummnity</p>
     <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#postJobModal">
       <i class="fas fa-plus"></i> Post a Job
     </button>
+    <h2></h2>
   </div>
 
   <!-- Search Jobs -->
+  <p>Please wait for few secons to fetch the jobs available</p>
+  <div class="mt-4">
   <input type="text" id="jobSearch" class="form-control" placeholder="Search for jobs..." />
-
+</div>
   <!-- Jobs List -->
   <div id="jobsContainer" class="mt-4"></div>
 </div>
@@ -125,7 +70,13 @@
     </div>
   </div>
 </div>
-
+ <footer>
+    <p>&copy; 2025 Mana Kovvali. All rights reserved.</p>
+    <img
+      src="https://visitor-badge.laobi.icu/badge?page_id=manoj7573.manakovvali"
+      alt="visitor count badge"
+    />
+  </footer>
 <script>
   let allJobs = [];
   const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec";
