--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <h2>Upcoming Events</h2>
     <ul class="event-list">
       <li>
-        <strong>Logo Contest</strong> – Coming Soon<br />
-        <a href="logo.html">Click to submit your logo</a>
+        <strong>Logo Contest</strong> – <a href="logo.html">Click to submit your logo</a><br />
+
         
       </li>
     </ul>
