--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h2>Upcoming Events</h2>
     <ul class="event-list">
       <li>
-        <strong>Logo Contest</strong> – <a href="logo.html">Click to submit your logo</a><br />
+        <strong>Logo Contest</strong> – <a href="logo.html" class="styled-link" >Click to submit your logo</a> Last date: 15 Aug 2025<br />
 
         
       </li>
