--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       Email: <a href="mailto:manakovvali@gmail.com">manakovvali@gmail.com</a><br />
       <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank" class="map-icon" aria-label="Open location in Google Maps">
         <i class="fas fa-map-marker-alt"></i> View on Map
-     <!-- </a>
-            <a href="https://www.facebook.com/profile.php?id=100064362655112" target="_blank" aria-label="Facebook" class="facebook-icon">
+      </a>
+            <!---a href="https://www.facebook.com/profile.php?id=100064362655112" target="_blank" aria-label="Facebook" class="facebook-icon">
         <i class="fab fa-facebook"></i>
       </a>--->
     </address>
