--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <i class="fas fa-map-marker-alt"></i> View on Map
       </a>
             <!---a href="https://www.facebook.com/profile.php?id=100064362655112" target="_blank" aria-label="Facebook" class="facebook-icon">
-        <i class="fab fa-facebook"></i>
-      </a>--->
+        <i class="fab fa-facebook"></i>-->
+      </a>
     </address>
 
   </section>
