--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 
   <footer>
     <p>&copy; 2025 Mana Kovvali. All rights reserved.</p>
-    <img
-      src="https://visitor-badge.laobi.icu/badge?page_id=manoj7573.manakovvali"
-      alt="visitor count badge"
-    />
+    <!--<img
+      <src="https://visitor-badge.laobi.icu/badge?page_id=manoj7573.manakovvali"
+      alt="visitor count badge">
+    />-->
   </footer>
 
   <script>
